--- a/index.html
+++ b/index.html
@@ -308,10 +308,6 @@ form{
         <div class="col-sm-12">
           <div class="card">
             <div class="card-body">
-              <div id="type">Mesures</div>
-              <span id="buttonPM"></span>
-              <span id="buttonTHP"></span>
-              <span id="buttonCOV"></span>
               <div id="historique">Historique</div>
               <span id="button1h"></span>
               <span id="button3h"></span>
@@ -319,6 +315,7 @@ form{
               <span id="button48h"></span>
               <span id="button1s"></span>
               <span id="button1m"></span>
+              <span id="button1a"></span>
               <div id="pdt">Pas de temps</div>
               <span id="button2m"></span>
               <span id="button15m"></span>
@@ -584,6 +581,7 @@ if(timestamp_UTC.getSeconds()< 10){
     document.getElementById("button48h").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',48,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">48h</button>';
     document.getElementById("button1s").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',168,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">1 semaine</button>';
     document.getElementById("button1m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',720,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">1 mois</button>';
+    document.getElementById("button1a").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',8760,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm" disabled>1 an</button>';
     document.getElementById("button2m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',' + timeLengthGraph + ',2)" class="btn btn-outline-secondary btn-sm">2m</button>';
     document.getElementById("button15m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',' + timeLengthGraph + ',15)" class="btn btn-outline-secondary btn-sm">15m</button>';
     document.getElementById("button60m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',' + timeLengthGraph + ',60)" class="btn btn-outline-secondary btn-sm">1h</button>';
@@ -1494,6 +1492,7 @@ function chooseTimeNebuleAir(id, hours, timespan) {
             document.getElementById("button48h").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',48,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">48h</button>';
             document.getElementById("button1s").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',168,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">1 semaine</button>';
             document.getElementById("button1m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',720,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">1 mois</button>';
+            document.getElementById("button1a").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',8760,' + timespanGraph + ')" class="btn btn-outline-secondary btn-sm">1 an</button>';
             document.getElementById("button2m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',' + timeLengthGraph + ',2)" class="btn btn-outline-secondary btn-sm">2m</button>';
             document.getElementById("button15m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',' + timeLengthGraph + ',15)" class="btn btn-outline-secondary btn-sm">15m</button>';
             document.getElementById("button60m").innerHTML = '<button type="button" onclick="chooseTimeNebuleAir(\'' + id + '\',' + timeLengthGraph + ',60)" class="btn btn-outline-secondary btn-sm">1h</button>';
@@ -1511,6 +1510,7 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button48h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1s").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 break;
             case 3:
                 document.getElementById("button1h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
@@ -1519,6 +1519,7 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button48h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1s").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 break;
             case 24:
                 document.getElementById("button1h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
@@ -1527,6 +1528,7 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button48h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1s").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 break;
             case 48:
                 document.getElementById("button1h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
@@ -1535,6 +1537,7 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button48h").children[0].classList.replace("btn-outline-secondary", "btn-secondary");
                 document.getElementById("button1s").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 break;
             case 168:
                 document.getElementById("button1h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
@@ -1543,6 +1546,7 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button48h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1s").children[0].classList.replace("btn-outline-secondary", "btn-secondary");
                 document.getElementById("button1m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 break;
             case 720:
                 document.getElementById("button1h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
@@ -1551,6 +1555,16 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button48h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1s").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1m").children[0].classList.replace("btn-outline-secondary", "btn-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                break;
+              case 8760:
+                document.getElementById("button1h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button3h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button24h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button48h").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1s").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
+                document.getElementById("button1a").children[0].classList.replace("btn-outline-secondary", "btn-secondary");
                 break;
             }
 
@@ -1579,6 +1593,20 @@ function chooseTimeNebuleAir(id, hours, timespan) {
                 document.getElementById("button60m").children[0].classList.replace("btn-secondary", "btn-outline-secondary");
                 document.getElementById("button1440m").children[0].classList.replace("btn-outline-secondary", "btn-secondary");
                 break;
+            }
+
+            if(timespan == 2 || timespan == 15){
+              document.getElementById("button1a").children[0].setAttribute("disabled","");
+            }else{
+              document.getElementById("button1a").children[0].removeAttribute("disabled");
+            }
+
+            if(hours == 8760){
+              document.getElementById("button2m").children[0].setAttribute("disabled","");
+              document.getElementById("button15m").children[0].setAttribute("disabled","");
+            }else{
+              document.getElementById("button2m").children[0].removeAttribute("disabled");
+              document.getElementById("button15m").children[0].removeAttribute("disabled");
             }
 }
 
@@ -1633,14 +1661,11 @@ function addr_search() {
     let lat = document.querySelector("#lat").value;
     let lng = document.querySelector("#lon").value;
 
-    //https://aircarto.fr/API_V2/capteurs/changeLoc?capteurID=999&lat=0.0&long=0.0
-
     console.log("https://aircarto.fr/API_V2/capteurs/changeLoc?capteurID=" + nebuleair +"&lat=" + lat + "&long=" + lng + "&token=" + token);
 
     $.ajax({
         method: "POST",
         url: "https://aircarto.fr/API_V2/capteurs/changeLoc?capteurID=" + nebuleair +"&lat=" + lat + "&long=" + lng + "&token=" + token
-        // data:"capteurID=" + nebuleair +"&lat=" + lat + "&long=" + lng + "&token=" + token
     }).fail(function() {
         console.log("Error while posting data to Aircarto API");
     });
