--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="col-sm-8">
             <a>
               <img
-                src="/monnebuleair/img/LogoNebuleAir.png"
+                src="./img/LogoNebuleAir.png"
                 height="50"
                 alt=""
               />
@@ -294,7 +294,7 @@
           <div class="col-sm-4">
             <a style="display: none">
               <img
-                src="/monnebuleair/img/LogoAtmoSud.png"
+                src="./img/LogoAtmoSud.png"
                 class="float-left"
                 height="50"
                 alt=""
@@ -303,7 +303,7 @@
 
             <a>
               <img
-                src="/monnebuleair/img/logoAirCarto.png"
+                src="./img/LogoAirCarto.png"
                 class="float-right"
                 height="50"
                 alt=""
@@ -1082,7 +1082,7 @@
         }
 
         if (type == "THP") {
-          chartTitleText += "°,%,hPa";
+          chartTitleText += "°C, %, hPa";
 
           // Set themes
           // https://www.amcharts.com/docs/v5/concepts/themes/
