--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@ form{
     </head>
     <body>
 
-
       <div class="toast-container position-fixed end-0 p-3" style="bottom:10px;">
         <div class="toast align-items-center" id="messageToast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="d-flex">
@@ -231,6 +230,7 @@ form{
     </div>
 
 
+    <div class="container">
 
 
         <section id="container_form">
@@ -267,7 +267,6 @@ form{
                   </div>
           
                   <div class="col-sm-4" >
-                    <a style="display: none;">
                       <img src="./img/LogoAtmoSud.png" class="float-left" height="50" alt="">
                     </a>
           
@@ -413,7 +412,7 @@ form{
 
       <!-- LOGOUT BUTTON -->
 
-      <div class="row" style="margin-top: 20px;">
+      <div class="row" style="margin-top: 20px; margin-bottom: 30px;">
         <div class="col-sm-12">
           <div class="card">
             <div class="card-body">
@@ -426,7 +425,7 @@ form{
     </div>
 
         </section>
-
+    </div>
         <!-- JavaScript -->
         <script>
 
