--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
       var myMarker;
 
       function submit() {
-        nebuleair = document.querySelector("#nebuleair").value;
+        nebuleair = "nebuleair-" + document.querySelector("#nebuleair").value;
         token = document.querySelector("#token").value;
 
         console.log(
